fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,8 @@
 html, body {
   width:100%; 
   height:100%; 
-  /*overflow-x:hidden;*/
-  /*overflow: auto;*/
+  overflow-y:hidden;
+  overflow-x:hidden;
 }
 
 .welcome {
